# apps/api/src/gen/kubb/zod/getV1ChallengesIdSolutionSchema.ts
@@ -1,0 +1,56 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+import { z } from "zod";
+
+export const getV1ChallengesIdSolutionPathParamsSchema = z.object({
+    "id": z.string().uuid()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1ChallengesIdSolution200Schema = z.object({
+    "success": z.literal(true),
+"message": z.string().optional(),
+"data": z.object({
+    "id": z.string(),
+"code": z.string().nullable(),
+"stdin": z.string().nullable(),
+"stdout": z.string().nullable(),
+"chatHistory": z.any().nullish(),
+"updatedAt": z.string()
+    }),
+"pagination": z.object({
+    "total": z.number(),
+"page": z.number(),
+"perPage": z.number(),
+"totalPages": z.number()
+    }).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1ChallengesIdSolution401Schema = z.object({
+    "success": z.literal(false),
+"message": z.string(),
+"errors": z.object({
+    
+    }).catchall(z.union([z.array(z.string()), z.string()])).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1ChallengesIdSolution404Schema = z.object({
+    "success": z.literal(false),
+"message": z.string(),
+"errors": z.object({
+    
+    }).catchall(z.union([z.array(z.string()), z.string()])).optional()
+    })
+
+export const getV1ChallengesIdSolutionQueryResponseSchema = z.lazy(() => getV1ChallengesIdSolution200Schema)
