# apps/api/src/gen/kubb/zod/getV1WorkSessionsByChallengeSchema.ts
@@ -1,0 +1,57 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+import { z } from "zod";
+
+export const getV1WorkSessionsByChallengeQueryParamsSchema = z.object({
+    "challengeId": z.string().uuid()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1WorkSessionsByChallenge200Schema = z.object({
+    "success": z.literal(true),
+"message": z.string().optional(),
+"data": z.object({
+    "id": z.string(),
+"challengeId": z.string(),
+"teachingAssistantId": z.string(),
+"classroomId": z.string().nullable(),
+"createdAt": z.string(),
+"lastMessageAt": z.string().nullable(),
+"endedAt": z.string().nullable()
+    }),
+"pagination": z.object({
+    "total": z.number(),
+"page": z.number(),
+"perPage": z.number(),
+"totalPages": z.number()
+    }).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1WorkSessionsByChallenge401Schema = z.object({
+    "success": z.literal(false),
+"message": z.string(),
+"errors": z.object({
+    
+    }).catchall(z.union([z.array(z.string()), z.string()])).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1WorkSessionsByChallenge404Schema = z.object({
+    "success": z.literal(false),
+"message": z.string(),
+"errors": z.object({
+    
+    }).catchall(z.union([z.array(z.string()), z.string()])).optional()
+    })
+
+export const getV1WorkSessionsByChallengeQueryResponseSchema = z.lazy(() => getV1WorkSessionsByChallenge200Schema)
