# apps/api/src/gen/kubb/zod/getV1WorkSessionsIdSchema.ts
@@ -1,0 +1,78 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+import { z } from "zod";
+
+export const getV1WorkSessionsIdPathParamsSchema = z.object({
+    "id": z.string().uuid()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1WorkSessionsId200Schema = z.object({
+    "success": z.literal(true),
+"message": z.string().optional(),
+"data": z.object({
+    "id": z.string(),
+"challengeId": z.string(),
+"teachingAssistantId": z.string(),
+"classroomId": z.string().nullable(),
+"createdAt": z.string(),
+"lastMessageAt": z.string().nullable(),
+"endedAt": z.string().nullable(),
+"interactions": z.array(z.object({
+    "id": z.string(),
+"interactionType": z.string(),
+"userPrompt": z.string(),
+"modelResponse": z.string(),
+"code": z.string().nullable(),
+"stdin": z.string().nullable(),
+"stdout": z.string().nullable(),
+"createdAt": z.string()
+    }))
+    }),
+"pagination": z.object({
+    "total": z.number(),
+"page": z.number(),
+"perPage": z.number(),
+"totalPages": z.number()
+    }).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1WorkSessionsId401Schema = z.object({
+    "success": z.literal(false),
+"message": z.string(),
+"errors": z.object({
+    
+    }).catchall(z.union([z.array(z.string()), z.string()])).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1WorkSessionsId403Schema = z.object({
+    "success": z.literal(false),
+"message": z.string(),
+"errors": z.object({
+    
+    }).catchall(z.union([z.array(z.string()), z.string()])).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const getV1WorkSessionsId404Schema = z.object({
+    "success": z.literal(false),
+"message": z.string(),
+"errors": z.object({
+    
+    }).catchall(z.union([z.array(z.string()), z.string()])).optional()
+    })
+
+export const getV1WorkSessionsIdQueryResponseSchema = z.lazy(() => getV1WorkSessionsId200Schema)
