# packages/types/kubb/GetV1WorkSessionsId.ts
@@ -1,0 +1,209 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+
+export type GetV1WorkSessionsIdPathParams = {
+    /**
+     * @type string, uuid
+    */
+    id: string;
+};
+
+export const getV1WorkSessionsId200SuccessEnum = {
+    "true": true
+} as const;
+
+export type GetV1WorkSessionsId200SuccessEnum = (typeof getV1WorkSessionsId200SuccessEnum)[keyof typeof getV1WorkSessionsId200SuccessEnum];
+
+/**
+ * @description Default Response
+*/
+export type GetV1WorkSessionsId200 = {
+    /**
+     * @type boolean
+    */
+    success: GetV1WorkSessionsId200SuccessEnum;
+    /**
+     * @type string | undefined
+    */
+    message?: string;
+    /**
+     * @type object
+    */
+    data: {
+        /**
+         * @type string
+        */
+        id: string;
+        /**
+         * @type string
+        */
+        challengeId: string;
+        /**
+         * @type string
+        */
+        teachingAssistantId: string;
+        /**
+         * @type string
+        */
+        classroomId: string | null;
+        /**
+         * @type string
+        */
+        createdAt: string;
+        /**
+         * @type string
+        */
+        lastMessageAt: string | null;
+        /**
+         * @type string
+        */
+        endedAt: string | null;
+        /**
+         * @type array
+        */
+        interactions: {
+            /**
+             * @type string
+            */
+            id: string;
+            /**
+             * @type string
+            */
+            interactionType: string;
+            /**
+             * @type string
+            */
+            userPrompt: string;
+            /**
+             * @type string
+            */
+            modelResponse: string;
+            /**
+             * @type string
+            */
+            code: string | null;
+            /**
+             * @type string
+            */
+            stdin: string | null;
+            /**
+             * @type string
+            */
+            stdout: string | null;
+            /**
+             * @type string
+            */
+            createdAt: string;
+        }[];
+    };
+    /**
+     * @type object | undefined
+    */
+    pagination?: {
+        /**
+         * @type number
+        */
+        total: number;
+        /**
+         * @type number
+        */
+        page: number;
+        /**
+         * @type number
+        */
+        perPage: number;
+        /**
+         * @type number
+        */
+        totalPages: number;
+    };
+};
+
+export const getV1WorkSessionsId401SuccessEnum = {
+    "false": false
+} as const;
+
+export type GetV1WorkSessionsId401SuccessEnum = (typeof getV1WorkSessionsId401SuccessEnum)[keyof typeof getV1WorkSessionsId401SuccessEnum];
+
+/**
+ * @description Default Response
+*/
+export type GetV1WorkSessionsId401 = {
+    /**
+     * @type boolean
+    */
+    success: GetV1WorkSessionsId401SuccessEnum;
+    /**
+     * @type string
+    */
+    message: string;
+    /**
+     * @type object | undefined
+    */
+    errors?: {
+        [key: string]: (string[] | string);
+    };
+};
+
+export const getV1WorkSessionsId403SuccessEnum = {
+    "false": false
+} as const;
+
+export type GetV1WorkSessionsId403SuccessEnum = (typeof getV1WorkSessionsId403SuccessEnum)[keyof typeof getV1WorkSessionsId403SuccessEnum];
+
+/**
+ * @description Default Response
+*/
+export type GetV1WorkSessionsId403 = {
+    /**
+     * @type boolean
+    */
+    success: GetV1WorkSessionsId403SuccessEnum;
+    /**
+     * @type string
+    */
+    message: string;
+    /**
+     * @type object | undefined
+    */
+    errors?: {
+        [key: string]: (string[] | string);
+    };
+};
+
+export const getV1WorkSessionsId404SuccessEnum = {
+    "false": false
+} as const;
+
+export type GetV1WorkSessionsId404SuccessEnum = (typeof getV1WorkSessionsId404SuccessEnum)[keyof typeof getV1WorkSessionsId404SuccessEnum];
+
+/**
+ * @description Default Response
+*/
+export type GetV1WorkSessionsId404 = {
+    /**
+     * @type boolean
+    */
+    success: GetV1WorkSessionsId404SuccessEnum;
+    /**
+     * @type string
+    */
+    message: string;
+    /**
+     * @type object | undefined
+    */
+    errors?: {
+        [key: string]: (string[] | string);
+    };
+};
+
+export type GetV1WorkSessionsIdQueryResponse = GetV1WorkSessionsId200;
+
+export type GetV1WorkSessionsIdQuery = {
+    Response: GetV1WorkSessionsId200;
+    PathParams: GetV1WorkSessionsIdPathParams;
+    Errors: GetV1WorkSessionsId401 | GetV1WorkSessionsId403 | GetV1WorkSessionsId404;
+};
